// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Basics / ModuleMetadata / In export default Story 1 1`] = `
<storybook-wrapper>
  <storybook-simple-token-component
    ng-reflect-name="Prop Name"
  >
    <h3>
      Prop Name
    </h3>
    <p>
      Items:
    </p>
    <ul>
      
      <li>
        Joe
      </li>
      <li>
        Jane
      </li>
    </ul>
  </storybook-simple-token-component>
</storybook-wrapper>
`;

exports[`Storyshots Basics / ModuleMetadata / In export default Story 2 1`] = `
<storybook-wrapper>
  <storybook-simple-token-component>
    <h3>
      Provider Name
    </h3>
    <p>
      Items:
    </p>
    <ul>
      
      <li>
        Joe
      </li>
      <li>
        Jane
      </li>
    </ul>
  </storybook-simple-token-component>
</storybook-wrapper>
`;
